--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,8 @@ ul{
   padding: 0;
 }
 
-body{overflow-x: hidden;}
+
+html,body{overflow-x: hidden;}
 
 /* set up the root */
 #root{
@@ -88,8 +89,6 @@ body{overflow-x: hidden;}
   background: hsl(var(--clr-pure-ligt));
   line-height: 1.66666;
    font-family: 'Manrope', sans-serif;
-  overflow-x: hidden;
-  max-width: 100vw;
 }
 
 /* make images easier to work with */
